--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </h2>
             <h3>It is our mission to develop the technologies which will facilitate God's children.</h3>
             <p>
-              Christ Nation is a voluntary digital nation seeking to provide an alternative system of governance within
+              Christ Nation is a voluntary digital nation seeking to provide an alternative system of governance within a decentralized framework. Utilizing peer to peer technologies such as the blockchain, we are able to facilitate various offerings such as issuing our own crypto currency, notarizing agreements, marriage contracts, identification, and other arbitration services.
             </p>
 
             <p>
