--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
             <h2>Building an Ecosystem for God's Kingdom on Earth.
 
           </h2>
-            <h3>It is our mission to develop the technologies which will facilitate God's children.</h3>
+            <h3>It is our mission to develop the technologies which will incubate a growing community of fellowship with God's children.</h3>
             <p>
               Christ Nation is a voluntary digital nation seeking to provide an alternative system of governance within a decentralized framework. Utilizing peer to peer technologies such as the blockchain, we are able to facilitate various offerings such as issuing our own crypto currency, notarizing agreements, marriage contracts, identification, and other arbitration services.
             </p>
 
             <p>
-            
+             
             </p>
           </div>
         </div>
