--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
             <h2>Building an Ecosystem for God's Kingdom on Earth.
 
           </h2>
-            <h3>It is our mission to develop the technologies which will incubate a growing community of fellowship.</h3>
+            <h3>It is our mission to develop the technologies which will incubate a growing community centered around Christ.</h3>
             <p>
               Christ Nation is a voluntary digital nation seeking to provide an alternative system of governance within a decentralized framework. Utilizing peer to peer technologies such as the blockchain, we are able to facilitate various offerings such as issuing our own crypto currency, notarizing agreements, marriage contracts, identification, and other arbitration services.
             </p>
 
             <p>
-             Our impact is local, and our reach is global. As we bridge the gap to minister to the unserved, the blessed and righteous will have the opportunites to better serve and connect with their respective communities. 
+             Our impact is local, and our reach is global. As we bridge the gap to minister to the unserved, the blessed and righteous will have the opportunites to better connect with their respective communities. Through philanthropic and educational initiatives, the message of Christ can be spread to the rest of the world with service and fellowship.  
             </p>
           </div>
         </div>
